Update CMake style

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,3 @@
-
 cmake_minimum_required(VERSION 3.0)
 
 # Basic settings
@@ -12,21 +11,18 @@ option(BUILD_EXAMPLES "Build examples" OFF)
 # Version
 # =======
 
-file(
-    STRINGS
-        "${CMAKE_CURRENT_SOURCE_DIR}/include/GooseEYE/config.h"
-        GooseEYE_version_defines
-    REGEX
-        "#define GOOSEEYE_VERSION_(MAJOR|MINOR|PATCH)")
+file(STRINGS "${CMAKE_CURRENT_SOURCE_DIR}/include/GooseEYE/config.h" GooseEYE_version_defines
+     REGEX "#define GOOSEEYE_VERSION_(MAJOR|MINOR|PATCH)")
 
 foreach(ver ${GooseEYE_version_defines})
     if(ver MATCHES "#define GOOSEEYE_VERSION_(MAJOR|MINOR|PATCH) +([^ ]+)$")
-        set(GOOSEEYE_VERSION_${CMAKE_MATCH_1} "${CMAKE_MATCH_2}" CACHE INTERNAL "")
+        set(GOOSEEYE_VERSION_${CMAKE_MATCH_1}
+            "${CMAKE_MATCH_2}"
+            CACHE INTERNAL "")
     endif()
 endforeach()
 
-set(GOOSEEYE_VERSION
-    ${GOOSEEYE_VERSION_MAJOR}.${GOOSEEYE_VERSION_MINOR}.${GOOSEEYE_VERSION_PATCH})
+set(GOOSEEYE_VERSION ${GOOSEEYE_VERSION_MAJOR}.${GOOSEEYE_VERSION_MINOR}.${GOOSEEYE_VERSION_PATCH})
 
 message(STATUS "Building GooseEYE v${GOOSEEYE_VERSION}")
 
@@ -49,55 +45,33 @@ target_link_libraries(GooseEYE INTERFACE xtensor)
 include(CMakePackageConfigHelpers)
 include(GNUInstallDirs)
 
-install(
-    DIRECTORY
-        "${CMAKE_CURRENT_SOURCE_DIR}/include/"
-    DESTINATION
-        include)
+install(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/include/" DESTINATION include)
+
+install(TARGETS GooseEYE EXPORT GooseEYE-targets)
 
 install(
-    TARGETS
-        GooseEYE
-    EXPORT
-        GooseEYE-targets)
-
-install(
-    EXPORT
-        GooseEYE-targets
-    FILE
-        GooseEYETargets.cmake
-    DESTINATION
-        "${CMAKE_INSTALL_LIBDIR}/cmake/GooseEYE")
+    EXPORT GooseEYE-targets
+    FILE GooseEYETargets.cmake
+    DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/GooseEYE")
 
 set(_GOOSEEYE ${CMAKE_SIZEOF_VOID_P})
 unset(CMAKE_SIZEOF_VOID_P)
 
-write_basic_package_version_file(
-        "${CMAKE_CURRENT_BINARY_DIR}/GooseEYEConfigVersion.cmake"
-    VERSION
-        ${GOOSEEYE_VERSION}
-    COMPATIBILITY
-        AnyNewerVersion)
+write_basic_package_version_file("${CMAKE_CURRENT_BINARY_DIR}/GooseEYEConfigVersion.cmake"
+    VERSION ${GOOSEEYE_VERSION}
+    COMPATIBILITY AnyNewerVersion)
 
 set(CMAKE_SIZEOF_VOID_P ${_GOOSEEYE})
 
-install(
-    FILES
-        "${CMAKE_CURRENT_SOURCE_DIR}/GooseEYEConfig.cmake"
-        "${CMAKE_CURRENT_BINARY_DIR}/GooseEYEConfigVersion.cmake"
-    DESTINATION
-        "${CMAKE_INSTALL_LIBDIR}/cmake/GooseEYE")
+install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/GooseEYEConfig.cmake"
+              "${CMAKE_CURRENT_BINARY_DIR}/GooseEYEConfigVersion.cmake"
+        DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/GooseEYE")
 
-configure_file(
-    "${CMAKE_CURRENT_SOURCE_DIR}/GooseEYE.pc.in"
-    "${CMAKE_CURRENT_BINARY_DIR}/GooseEYE.pc"
-     @ONLY)
+configure_file("${CMAKE_CURRENT_SOURCE_DIR}/GooseEYE.pc.in"
+               "${CMAKE_CURRENT_BINARY_DIR}/GooseEYE.pc" @ONLY)
 
-install(
-    FILES
-        "${CMAKE_CURRENT_BINARY_DIR}/GooseEYE.pc"
-    DESTINATION
-        "${CMAKE_INSTALL_LIBDIR}/pkgconfig/")
+install(FILES "${CMAKE_CURRENT_BINARY_DIR}/GooseEYE.pc"
+        DESTINATION "${CMAKE_INSTALL_LIBDIR}/pkgconfig/")
 
 # Add builds
 # ==========
