--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -16,6 +16,7 @@ environment:
     - MINICONDA: C:\myname-conda
 
 init:
+  - set RUN_EXAMPLES="false"
   - "ECHO %MINICONDA%"
   - if "%APPVEYOR_BUILD_WORKER_IMAGE%" == "Visual Studio 2015" set VCVARPATH="C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat"
   - if "%APPVEYOR_BUILD_WORKER_IMAGE%" == "Visual Studio 2015" set VCARGUMENT=%PLATFORM%
@@ -50,30 +51,30 @@ build_script:
   # Run tests
   - .\test\main
   # Run C++ examples
-  - .\docs\examples\S2
-  - .\docs\examples\S2_autocorrelation
-  - .\docs\examples\S2_mask
-  - .\docs\examples\S2_ensemble
-  - .\docs\examples\C2
-  - .\docs\examples\L
-  - .\docs\examples\W2
-  - .\docs\examples\W2c
-  - .\docs\examples\clusters
-  - .\docs\examples\clusters_centers
-  - .\docs\examples\clusters_dilate
-  - .\docs\examples\heightheight
-  - .\docs\examples\mean
+  - if("%RUN_EXMAPLES" -eq "true"){.\docs\examples\S2}
+  - if("%RUN_EXMAPLES" -eq "true"){.\docs\examples\S2_autocorrelation}
+  - if("%RUN_EXMAPLES" -eq "true"){.\docs\examples\S2_mask}
+  - if("%RUN_EXMAPLES" -eq "true"){.\docs\examples\S2_ensemble}
+  - if("%RUN_EXMAPLES" -eq "true"){.\docs\examples\C2}
+  - if("%RUN_EXMAPLES" -eq "true"){.\docs\examples\L}
+  - if("%RUN_EXMAPLES" -eq "true"){.\docs\examples\W2}
+  - if("%RUN_EXMAPLES" -eq "true"){.\docs\examples\W2c}
+  - if("%RUN_EXMAPLES" -eq "true"){.\docs\examples\clusters}
+  - if("%RUN_EXMAPLES" -eq "true"){.\docs\examples\clusters_centers}
+  - if("%RUN_EXMAPLES" -eq "true"){.\docs\examples\clusters_dilate}
+  - if("%RUN_EXMAPLES" -eq "true"){.\docs\examples\heightheight}
+  - if("%RUN_EXMAPLES" -eq "true"){.\docs\examples\mean}
   # Run Python examples
-  - python docs\examples\S2.py --no-plot
-  - python docs\examples\S2_autocorrelation.py --no-plot
-  - python docs\examples\S2_mask.py --no-plot
-  - python docs\examples\S2_ensemble.py --no-plot
-  - python docs\examples\C2.py --no-plot
-  - python docs\examples\L.py --no-plot
-  - python docs\examples\W2.py --no-plot
-  - python docs\examples\W2c.py --no-plot
-  - python docs\examples\clusters.py --no-plot
-  - python docs\examples\clusters_centers.py --no-plot
-  - python docs\examples\clusters_dilate.py --no-plot
-  - python docs\examples\heightheight.py --no-plot
-  - python docs\examples\mean.py --no-plot
+  - if("%RUN_EXMAPLES" -eq "true"){python docs\examples\S2.py --check}
+  - if("%RUN_EXMAPLES" -eq "true"){python docs\examples\S2_autocorrelation.py --check}
+  - if("%RUN_EXMAPLES" -eq "true"){python docs\examples\S2_mask.py --check}
+  - if("%RUN_EXMAPLES" -eq "true"){python docs\examples\S2_ensemble.py --check}
+  - if("%RUN_EXMAPLES" -eq "true"){python docs\examples\C2.py --check}
+  - if("%RUN_EXMAPLES" -eq "true"){python docs\examples\L.py --check}
+  - if("%RUN_EXMAPLES" -eq "true"){python docs\examples\W2.py --check}
+  - if("%RUN_EXMAPLES" -eq "true"){python docs\examples\W2c.py --check}
+  - if("%RUN_EXMAPLES" -eq "true"){python docs\examples\clusters.py --check}
+  - if("%RUN_EXMAPLES" -eq "true"){python docs\examples\clusters_centers.py --check}
+  - if("%RUN_EXMAPLES" -eq "true"){python docs\examples\clusters_dilate.py --check}
+  - if("%RUN_EXMAPLES" -eq "true"){python docs\examples\heightheight.py --check}
+  - if("%RUN_EXMAPLES" -eq "true"){python docs\examples\mean.py --check}
