--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,7 @@ matrix:
     - os: osx
       osx_image: xcode9
       compiler: clang
-      env: RUN_EXAMLES="false"
+      env: RUN_EXAMLES="true"
 env:
   global:
     - MINCONDA_VERSION="latest"
