--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -80,6 +80,7 @@ build_script:
   - if("%RUN_EXMAPLES" -eq "true"){python clusters.py --check}
   - if("%RUN_EXMAPLES" -eq "true"){python clusters_centers.py --check}
   - if("%RUN_EXMAPLES" -eq "true"){python clusters_dilate.py --check}
+  - if("%RUN_EXMAPLES" -eq "true"){python clusters_dilate_periodic.py --check}
   - if("%RUN_EXMAPLES" -eq "true"){python heightheight.py --check}
   - if("%RUN_EXMAPLES" -eq "true"){python mean.py --check}
   - if("%RUN_EXMAPLES" -eq "true"){cd ..\..}
