--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -34,13 +34,17 @@ install:
   - conda config --set always_yes yes --set changeps1 no
   - conda update -q conda
   - conda info -a
-  - conda install -c conda-forge cmake
-  - conda install -c conda-forge xsimd
-  - conda install -c conda-forge xtensor
-  - conda install -c conda-forge python
-  - conda install -c conda-forge numpy
-  - conda install -c conda-forge pyxtensor
-  - conda install -c conda-forge catch2
+  - conda install -c conda-forge mamba
+  - >-
+    mamba install -c conda-forge
+    cmake
+    xsimd
+    xtensor
+    python
+    numpy
+    pyxtensor
+    catch2
+    highfive
   # Build/install the library
   - cmake -G "NMake Makefiles" -DCMAKE_INSTALL_PREFIX=%MINICONDA%\\LIBRARY -DCMAKE_BUILD_TYPE=RELEASE -DBUILD_TESTS=ON -DBUILD_EXAMPLES=ON .
   - nmake
