--- a/.travis.yml
+++ b/.travis.yml
@@ -80,13 +80,17 @@ install:
     - hash -r
     - conda config --set always_yes yes --set changeps1 no
     - conda update -q conda
-    - conda install -c conda-forge cmake
-    - conda install -c conda-forge xsimd
-    - conda install -c conda-forge xtensor
-    - conda install -c conda-forge python
-    - conda install -c conda-forge numpy
-    - conda install -c conda-forge pyxtensor
-    - conda install -c conda-forge catch2
+    - conda install -c conda-forge mamba
+    - >-
+      mamba install -c conda-forge
+      cmake
+      xsimd
+      xtensor
+      python
+      numpy
+      pyxtensor
+      catch2
+      highfive
     # Build/install the library
     - cmake . -DBUILD_TESTS=ON -DBUILD_EXAMPLES=ON -DSIMD=${USE_XSIMD}
     - make
