--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -38,7 +38,6 @@ install:
   - >-
     mamba install -c conda-forge
     cmake
-    xsimd
     xtensor
     python
     numpy
@@ -46,7 +45,7 @@ install:
     catch2
     highfive
   # Build/install the library
-  - cmake -G "NMake Makefiles" -DCMAKE_INSTALL_PREFIX=%MINICONDA%\\LIBRARY -DCMAKE_BUILD_TYPE=RELEASE -DBUILD_TESTS=ON -DBUILD_EXAMPLES=ON .
+  - cmake -G "NMake Makefiles" -DCMAKE_INSTALL_PREFIX=%MINICONDA%\\LIBRARY -DCMAKE_BUILD_TYPE=RELEASE -DBUILD_TESTS=ON -DBUILD_EXAMPLES=ON -DSIMD=OFF .
   - nmake
   - nmake install
   - python setup.py build
