--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -9,9 +9,14 @@ endif()
 set(WARNINGS ON)
 set(ASSERT ON)
 set(DEBUG ON)
+option(SIMD "Enable xsimd" ON)
 
 find_package(xtensor REQUIRED)
 find_package(Catch2 REQUIRED)
+
+if(SIMD)
+    find_package(xsimd REQUIRED)
+endif()
 
 file(GLOB sources "*.cpp")
 
@@ -20,8 +25,11 @@ add_executable(main ${sources})
 target_link_libraries(main PRIVATE
     Catch2::Catch2
     GooseEYE
-    xtensor::optimize
-    xtensor::use_xsimd)
+    xtensor::optimize)
+
+if(SIMD)
+    target_link_libraries(main INTERFACE xtensor::use_xsimd)
+endif()
 
 if(WARNINGS)
     target_link_libraries(main PRIVATE GooseEYE::compiler_warnings)
