--- a/.travis.yml
+++ b/.travis.yml
@@ -114,19 +114,19 @@ script:
     - if [ "$RUN_EXAMPLES" = "true" ]; then cd ../..; fi
     # Run Python examples
     - if [ "$RUN_EXAMPLES" = "true" ]; then cd docs/examples; fi
-    - if [ "$RUN_EXAMPLES" = "true" ]; python S2.py --check; fi
-    - if [ "$RUN_EXAMPLES" = "true" ]; python S2_autocorrelation.py --check; fi
-    - if [ "$RUN_EXAMPLES" = "true" ]; python S2_mask.py --check; fi
-    - if [ "$RUN_EXAMPLES" = "true" ]; python S2_ensemble.py --check; fi
-    - if [ "$RUN_EXAMPLES" = "true" ]; python C2.py --check; fi
-    - if [ "$RUN_EXAMPLES" = "true" ]; python L.py --check; fi
-    - if [ "$RUN_EXAMPLES" = "true" ]; python W2.py --check; fi
-    - if [ "$RUN_EXAMPLES" = "true" ]; python W2c.py --check; fi
-    - if [ "$RUN_EXAMPLES" = "true" ]; python clusters.py --check; fi
-    - if [ "$RUN_EXAMPLES" = "true" ]; python clusters_centers.py --check; fi
-    - if [ "$RUN_EXAMPLES" = "true" ]; python clusters_dilate.py --check; fi
-    - if [ "$RUN_EXAMPLES" = "true" ]; python clusters_dilate_periodic.py --check; fi
-    - if [ "$RUN_EXAMPLES" = "true" ]; python heightheight.py --check; fi
-    - if [ "$RUN_EXAMPLES" = "true" ]; python mean.py --check; fi
-    - if [ "$RUN_EXAMPLES" = "true" ]; python pixel_path.py --check; fi
+    - if [ "$RUN_EXAMPLES" = "true" ]; then python S2.py --check; fi
+    - if [ "$RUN_EXAMPLES" = "true" ]; then python S2_autocorrelation.py --check; fi
+    - if [ "$RUN_EXAMPLES" = "true" ]; then python S2_mask.py --check; fi
+    - if [ "$RUN_EXAMPLES" = "true" ]; then python S2_ensemble.py --check; fi
+    - if [ "$RUN_EXAMPLES" = "true" ]; then python C2.py --check; fi
+    - if [ "$RUN_EXAMPLES" = "true" ]; then python L.py --check; fi
+    - if [ "$RUN_EXAMPLES" = "true" ]; then python W2.py --check; fi
+    - if [ "$RUN_EXAMPLES" = "true" ]; then python W2c.py --check; fi
+    - if [ "$RUN_EXAMPLES" = "true" ]; then python clusters.py --check; fi
+    - if [ "$RUN_EXAMPLES" = "true" ]; then python clusters_centers.py --check; fi
+    - if [ "$RUN_EXAMPLES" = "true" ]; then python clusters_dilate.py --check; fi
+    - if [ "$RUN_EXAMPLES" = "true" ]; then python clusters_dilate_periodic.py --check; fi
+    - if [ "$RUN_EXAMPLES" = "true" ]; then python heightheight.py --check; fi
+    - if [ "$RUN_EXAMPLES" = "true" ]; then python mean.py --check; fi
+    - if [ "$RUN_EXAMPLES" = "true" ]; then python pixel_path.py --check; fi
     - if [ "$RUN_EXAMPLES" = "true" ]; then cd ../..; fi
