--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -40,7 +40,7 @@ install:
     catch2
     highfive
   # Build/install the library
-  - cmake -G "NMake Makefiles" -DCMAKE_INSTALL_PREFIX=%MINICONDA%\\LIBRARY -DCMAKE_BUILD_TYPE=RELEASE -DBUILD_TESTS=ON -DBUILD_EXAMPLES=ON -DSIMD=OFF -DWARNINGS=OFF .
+  - cmake -G "NMake Makefiles" -DCMAKE_INSTALL_PREFIX=%MINICONDA%\\LIBRARY -DCMAKE_BUILD_TYPE=RELEASE -DBUILD_TESTS=ON -DBUILD_EXAMPLES=OFF -DSIMD=OFF -DWARNINGS=OFF .
   - nmake
   - nmake install
   - python setup.py build
@@ -49,37 +49,37 @@ install:
 build_script:
   # Run tests
   - .\test\main
-  # Run C++ examples
-  - cd docs\examples
-  - .\S2
-  - .\S2_autocorrelation
-  - .\S2_mask
-  - .\S2_ensemble
-  - .\C2
-  - .\L
-  - .\W2
-  - .\W2c
-  - .\clusters
-  - .\clusters_centers
-  - .\clusters_dilate
-  - .\heightheight
-  - .\mean
-  - cd ..\..
-  # Run Python examples
-  - cd docs\examples
-  - python S2.py --check
-  - python S2_autocorrelation.py --check
-  - python S2_mask.py --check
-  - python S2_ensemble.py --check
-  - python C2.py --check
-  - python L.py --check
-  - python W2.py --check
-  - python W2c.py --check
-  - python clusters.py --check
-  - python clusters_centers.py --check
-  - python clusters_dilate.py --check
-  - python clusters_dilate_periodic.py --check
-  - python heightheight.py --check
-  - python mean.py --check
-  - python pixel_path.py --check
-  - cd ..\..
+  # # Run C++ examples
+  # - cd docs\examples
+  # - .\S2
+  # - .\S2_autocorrelation
+  # - .\S2_mask
+  # - .\S2_ensemble
+  # - .\C2
+  # - .\L
+  # - .\W2
+  # - .\W2c
+  # - .\clusters
+  # - .\clusters_centers
+  # - .\clusters_dilate
+  # - .\heightheight
+  # - .\mean
+  # - cd ..\..
+  # # Run Python examples
+  # - cd docs\examples
+  # - python S2.py --check
+  # - python S2_autocorrelation.py --check
+  # - python S2_mask.py --check
+  # - python S2_ensemble.py --check
+  # - python C2.py --check
+  # - python L.py --check
+  # - python W2.py --check
+  # - python W2c.py --check
+  # - python clusters.py --check
+  # - python clusters_centers.py --check
+  # - python clusters_dilate.py --check
+  # - python clusters_dilate_periodic.py --check
+  # - python heightheight.py --check
+  # - python mean.py --check
+  # - python pixel_path.py --check
+  # - cd ..\..
