--- a/docs/examples/CMakeLists.txt
+++ b/docs/examples/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-cmake_minimum_required(VERSION 3.0)
+cmake_minimum_required(VERSION 3.16)
 
 if(CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
     project(GooseEYE-examples)
@@ -7,8 +7,22 @@ if(CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
     set(GOOSEEYE_INCLUDE_DIR ${GooseEYE_INCLUDE_DIRS})
 endif()
 
-option(WARNINGS "Show build warnings" ON)
-option(ASSERT "Enable assertions" ON)
+set(ASSERT OFF)
+set(DEBUG OFF)
+option(SIMD "Enable xsimd" ON)
+option(WARNINGS "Enable warnings" ON)
+
+set(CMAKE_BUILD_TYPE Release)
+
+set(HIGHFIVE_USE_BOOST 0)
+set(HIGHFIVE_USE_XTENSOR 1)
+
+find_package(xtensor REQUIRED)
+find_package(HighFive REQUIRED)
+
+if(SIMD)
+    find_package(xsimd REQUIRED)
+endif()
 
 file(GLOB APP_SOURCES *.cpp)
 
@@ -22,14 +36,26 @@ foreach(testsourcefile ${APP_SOURCES})
     target_link_libraries(${testname} PUBLIC
         GooseEYE
         xtensor::optimize
-        xtensor::use_xsimd)
+        HighFive)
+
+    if(SIMD)
+        target_link_libraries(${testname} INTERFACE xtensor::use_xsimd)
+    endif()
 
     if(WARNINGS)
         target_link_libraries(${testname} PRIVATE GooseEYE::compiler_warnings)
     endif()
 
     if(ASSERT)
+        target_link_libraries(${testname} PRIVATE GooseEYE::assert)
+    endif()
+
+    if(DEBUG)
         target_link_libraries(${testname} PRIVATE GooseEYE::debug)
+    endif()
+
+    if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/${testname}.h5)
+        configure_file(${testname}.h5 ${testname}.h5 COPYONLY)
     endif()
 
 endforeach()
