--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ matrix:
             - ubuntu-toolchain-r-test
           packages:
             - g++-5
-      env: COMPILER=gcc GCC=5
+      env: COMPILER=gcc GCC=5 RUN_EXAMLES="false" USE_XSIMD=1
     - os: linux
       addons:
         apt:
@@ -19,7 +19,7 @@ matrix:
             - ubuntu-toolchain-r-test
           packages:
             - g++-6
-      env: COMPILER=gcc GCC=6
+      env: COMPILER=gcc GCC=6 RUN_EXAMLES="false" USE_XSIMD=1
     - os: linux
       addons:
         apt:
@@ -27,7 +27,7 @@ matrix:
             - ubuntu-toolchain-r-test
           packages:
             - g++-7
-      env: COMPILER=gcc GCC=7
+      env: COMPILER=gcc GCC=7 RUN_EXAMLES="true" USE_XSIMD=1
     - os: linux
       addons:
         apt:
@@ -36,10 +36,11 @@ matrix:
             - llvm-toolchain-xenial-6.0
           packages:
             - clang-6.0
-      env: COMPILER=clang CLANG=6.0
+      env: COMPILER=clang CLANG=6.0 RUN_EXAMLES="false" USE_XSIMD=1
     - os: osx
-      osx_image: xcode8
+      osx_image: xcode9
       compiler: clang
+      env: RUN_EXAMLES="true" USE_XSIMD=1
 env:
   global:
     - MINCONDA_VERSION="latest"
@@ -75,15 +76,19 @@ install:
     - hash -r
     - conda config --set always_yes yes --set changeps1 no
     - conda update -q conda
-    - conda install -c conda-forge cmake
-    - conda install -c conda-forge xsimd
-    - conda install -c conda-forge xtensor
-    - conda install -c conda-forge python
-    - conda install -c conda-forge numpy
-    - conda install -c conda-forge pyxtensor
-    - conda install -c conda-forge catch2
+    - conda install -c conda-forge mamba
+    - >-
+      mamba install -c conda-forge
+      cmake
+      xsimd
+      xtensor
+      python
+      numpy
+      pyxtensor
+      catch2
+      highfive
     # Build/install the library
-    - cmake . -DBUILD_TESTS=ON -DBUILD_EXAMPLES=ON
+    - cmake . -DBUILD_TESTS=ON -DBUILD_EXAMPLES=ON -DSIMD=${USE_XSIMD}
     - make
     - sudo make install
     - python setup.py build
@@ -92,30 +97,36 @@ script:
     # Run tests
     - ./test/main
     # Run C++ examples
-    - ./docs/examples/S2
-    - ./docs/examples/S2_autocorrelation
-    - ./docs/examples/S2_mask
-    - ./docs/examples/S2_ensemble
-    - ./docs/examples/C2
-    - ./docs/examples/L
-    - ./docs/examples/W2
-    - ./docs/examples/W2c
-    - ./docs/examples/clusters
-    - ./docs/examples/clusters_centers
-    - ./docs/examples/clusters_dilate
-    - ./docs/examples/heightheight
-    - ./docs/examples/mean
+    - if [ "$RUN_EXAMPLES" = "true" ]; then cd docs/examples; fi
+    - if [ "$RUN_EXAMPLES" = "true" ]; then ./S2; fi
+    - if [ "$RUN_EXAMPLES" = "true" ]; then ./S2_autocorrelation; fi
+    - if [ "$RUN_EXAMPLES" = "true" ]; then ./S2_mask; fi
+    - if [ "$RUN_EXAMPLES" = "true" ]; then ./S2_ensemble; fi
+    - if [ "$RUN_EXAMPLES" = "true" ]; then ./C2; fi
+    - if [ "$RUN_EXAMPLES" = "true" ]; then ./L; fi
+    - if [ "$RUN_EXAMPLES" = "true" ]; then ./W2; fi
+    - if [ "$RUN_EXAMPLES" = "true" ]; then ./W2c; fi
+    - if [ "$RUN_EXAMPLES" = "true" ]; then ./clusters; fi
+    - if [ "$RUN_EXAMPLES" = "true" ]; then ./clusters_centers; fi
+    - if [ "$RUN_EXAMPLES" = "true" ]; then ./clusters_dilate; fi
+    - if [ "$RUN_EXAMPLES" = "true" ]; then ./heightheight; fi
+    - if [ "$RUN_EXAMPLES" = "true" ]; then ./mean; fi
+    - if [ "$RUN_EXAMPLES" = "true" ]; then cd ../..; fi
     # Run Python examples
-    - python docs/examples/S2.py --no-plot
-    - python docs/examples/S2_autocorrelation.py --no-plot
-    - python docs/examples/S2_mask.py --no-plot
-    - python docs/examples/S2_ensemble.py --no-plot
-    - python docs/examples/C2.py --no-plot
-    - python docs/examples/L.py --no-plot
-    - python docs/examples/W2.py --no-plot
-    - python docs/examples/W2c.py --no-plot
-    - python docs/examples/clusters.py --no-plot
-    - python docs/examples/clusters_centers.py --no-plot
-    - python docs/examples/clusters_dilate.py --no-plot
-    - python docs/examples/heightheight.py --no-plot
-    - python docs/examples/mean.py --no-plot
+    - if [ "$RUN_EXAMPLES" = "true" ]; then cd docs/examples; fi
+    - if [ "$RUN_EXAMPLES" = "true" ]; then python S2.py --check; fi
+    - if [ "$RUN_EXAMPLES" = "true" ]; then python S2_autocorrelation.py --check; fi
+    - if [ "$RUN_EXAMPLES" = "true" ]; then python S2_mask.py --check; fi
+    - if [ "$RUN_EXAMPLES" = "true" ]; then python S2_ensemble.py --check; fi
+    - if [ "$RUN_EXAMPLES" = "true" ]; then python C2.py --check; fi
+    - if [ "$RUN_EXAMPLES" = "true" ]; then python L.py --check; fi
+    - if [ "$RUN_EXAMPLES" = "true" ]; then python W2.py --check; fi
+    - if [ "$RUN_EXAMPLES" = "true" ]; then python W2c.py --check; fi
+    - if [ "$RUN_EXAMPLES" = "true" ]; then python clusters.py --check; fi
+    - if [ "$RUN_EXAMPLES" = "true" ]; then python clusters_centers.py --check; fi
+    - if [ "$RUN_EXAMPLES" = "true" ]; then python clusters_dilate.py --check; fi
+    - if [ "$RUN_EXAMPLES" = "true" ]; then python clusters_dilate_periodic.py --check; fi
+    - if [ "$RUN_EXAMPLES" = "true" ]; then python heightheight.py --check; fi
+    - if [ "$RUN_EXAMPLES" = "true" ]; then python mean.py --check; fi
+    - if [ "$RUN_EXAMPLES" = "true" ]; then python pixel_path.py --check; fi
+    - if [ "$RUN_EXAMPLES" = "true" ]; then cd ../..; fi
